# profiler

./: .bazelrc  .gitignore  BUILD  README.md  WORKSPACE  config.bzl  install_and_run.py  package.json  pnpm-lock.yaml  requirements.in  requirements.txt  requirements_lock_3_10.txt  requirements_lock_3_11.txt  requirements_lock_3_12.txt  requirements_lock_3_9.txt  rollup.config.js  rules_cc.bzl  tensorboard_profiling_keras.py  tsconfig.json
convert/: BUILD  compute_inference_latency.cc  compute_inference_latency_test.cc  data_table_utils_test.cc  dcn_analysis.cc  dcn_analysis.h  dcn_analysis_test.cc  dcn_slack_analysis_combiner.cc  dcn_utils.cc  dcn_utils_test.cc  duty_cycle_combiner.h  duty_cycle_combiner_test.cc  duty_cycle_tracker.cc  duty_cycle_tracker_test.cc  hlo_proto_to_graph_view.cc  hlo_proto_to_graph_view.h  hlo_proto_to_graph_view_test.cc  hlo_proto_to_memory_visualization_utils.cc  hlo_proto_to_memory_visualization_utils_test.cc  hlo_to_tools_data.cc  hlo_to_tools_data.h  inference_stats.cc  inference_stats.h  inference_stats_grouping.cc  inference_stats_grouping_test.cc  inference_stats_sampler.cc  inference_stats_sampler_test.cc  multi_xplanes_to_op_stats.cc  multi_xplanes_to_op_stats.h  multi_xspace_to_inference_stats.cc  multi_xspace_to_inference_stats.h  op_metrics_db_combiner.cc  op_metrics_db_combiner.h  op_metrics_to_record.cc  op_profile_builder.cc  op_stats_combiner.cc  op_stats_combiner.h  op_stats_combiner_test.cc  op_stats_to_hlo_stats.cc  op_stats_to_hlo_stats.h  (+50 more)
defs/: BUILD  BUILD.bazel  defs.bzl
docs/: profile_multi_gpu.md
frontend/: BUILD  (+5 more)
(+767 files in other folders)
