load("@npm//:@angular/compiler-cli/package_json.bzl", angular_compiler_cli = "bin")
#load("@npm//:@angular/compiler-cli/package_json.bzl", compiler_cli = "bin")

#compiler_cli.ngc_binary(name = "ngc")
# Define the @angular/compiler-cli ngc bin binary as a target
angular_compiler_cli.ngc_binary(
    name = "ngc",
    visibility = ["//visibility:public"],
)
